--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Generalnie naturalnie, dietetyk Marta Ruszkiewicz">
-    <meta name="keywords" content="dieta, odchudzanie, zdrowie">
-    <meta name="author" content="marelons1337">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Brain to Body - Think. Eat. Move.">
+    <meta name="author" content="aakashb1111">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <title>Brain to Body - Think. Eat. Move.</title>
 </head>
 <body class="">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
