--- a/about.html
+++ b/about.html
@@ -26,16 +26,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="hire-me.html">Workspace</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="hire-me.html">Wspolpraca</a>
+            <a class="nav-link active" aria-current="page" href="#">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">O mnie</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Kontakt</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -46,19 +43,38 @@
     <img src="woman.png" alt="picture of the author" srcset="" class="author">
     <div class="about-me-left">
       <header>
-        <h1 class="articles-header">Poznajmy sie!</h1>
+        <h1 class="articles-header">Meet the Co-Founders of Brain to Body: Expertise Rooted in Science and Wellness!</h1>
       </header>
       <div class="about-me">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus auctor a enim ut pulvinar. Praesent tincidunt facilisis ligula, id suscipit nisl luctus ac. Pellentesque ut massa id sem interdum fermentum vel sed augue. Vivamus est dolor, mattis vel metus a, tempus eleifend erat. Cras fringilla vel magna quis interdum. Etiam sed sapien laoreet, posuere lectus sit amet, maximus diam. Morbi ut efficitur turpis. Fusce quis neque a ligula egestas tempor. In purus velit, placerat mollis accumsan ac, efficitur consequat ante. Pellentesque ut enim nec velit elementum mollis. Phasellus volutpat massa iaculis tortor rhoncus aliquet. Vivamus ac sagittis metus. Suspendisse vulputate est in efficitur tincidunt. Proin gravida est ac massa semper tincidunt. Aenean scelerisque rutrum malesuada.
-        In laoreet purus vitae justo consectetur fermentum. In tristique risus at velit interdum cursus. Cras ornare tristique nibh quis euismod. Fusce elit felis, aliquet in risus nec, commodo sagittis purus. Mauris sem massa, vestibulum quis volutpat at, accumsan ut tortor. Nam dapibus viverra felis sit amet fermentum. Fusce sollicitudin efficitur turpis a fringilla. In vehicula dictum pharetra. Suspendisse mauris sem, lacinia et libero quis, lacinia porttitor nisi. Sed diam metus, pharetra id auctor sit amet, mattis eu urna. Praesent tincidunt metus quis gravida pellentesque. In aliquam libero nisi, et posuere dolor eleifend ut. In convallis est placerat velit dapibus, id iaculis nibh ultricies. Cras est mauris, volutpat sed fermentum sed, iaculis finibus ante. Donec tincidunt finibus commodo.  
+      At the heart of Brain to Body is a powerhouse duo bringing together deep expertise in food science, clinical research, and personalized health transformation.  
+
+Aruna Oswal  
+A dedicated dietitian with a rich background in clinical research and data management, Aruna’s journey spans from pharmaceutical marketing to clinical trials and nutrition education. With certifications in clinical research and a diploma in dietetics and weight management, she bridges the gap between evidence-based strategies and real-world wellness solutions. Her focus? Designing sustainable lifestyle changes that are as practical as they are effective.  
+
+Soumya Chavaraddi  
+Soumya is a multi-talented food technologist and dietitian with a passion for holistic health. With over four years of experience in the FMCG sector, she has worked in food innovation, safety, and product development, while also empowering rural communities through food  quality and safety training. Soumya also  specializes in transformative techniques like meditation, visualization, NLP (Neuro-Linguistic Programming), EFT (Emotional Freedom Techniques), and more. Her integrated approach addresses both the mind and body, helping clients overcome both mental and physical challenges as a result of which is a fully transformed and sustainable wellness.
+
+Together, Aruna and Soumya bring a unique, multidisciplinary approach to Brain to Body. By combining neuroscience, nutrition, pharmacy and brain reprogramming techniques, they’re on a mission to help individuals achieve sustainable, brain-first transformations.  
+
+Let us guide you in connecting your mind and body for a healthier, more fulfilling life. Welcome to Brain to Body!  
       </div>
     </div>
     <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food">
     <div class="about-me-right">
       <div class="about-me">
-        Fusce venenatis justo vitae dui eleifend, eu posuere dui posuere. Ut mollis convallis erat quis eleifend. Morbi ipsum velit, imperdiet nec sapien condimentum, porta finibus lacus. Etiam sit amet dignissim dui. Fusce vitae quam felis. Etiam eu enim id lorem faucibus molestie. Vivamus egestas tristique nulla ac commodo. Duis et porta turpis, in elementum neque. Vivamus sit amet ligula eget erat posuere viverra at id orci. Morbi sem sapien, vehicula eget ligula id, ultrices posuere ante. Quisque finibus ultricies enim, at lacinia nunc mollis ut. Mauris at tincidunt leo, eget posuere lorem.
-        Sed sed leo lectus. Nunc imperdiet, quam at fringilla sagittis, massa justo ultrices magna, vel efficitur odio tellus eget diam. Integer porta metus sit amet ante mollis, rutrum pretium felis sodales. Proin a velit nec lectus pulvinar lacinia sit amet vel ante. Praesent eros turpis, consequat in lectus et, elementum aliquet eros. In eu nisl eget sapien ultrices laoreet. Fusce fermentum semper nulla nec scelerisque. Sed malesuada ligula vitae bibendum porta. Duis faucibus enim lectus, ac mattis neque auctor quis.
-        Donec tincidunt maximus odio nec convallis. Morbi aliquam dapibus ornare. In ac dui eu elit pharetra accumsan eget vitae nisl. Phasellus et enim urna. Vivamus ullamcorper purus at laoreet vulputate. Duis a accumsan metus. Nullam id orci lacus.
+      Specialities
+Mindset Coaching – Focus on fostering positive thinking and resilience.
+Brain Reprogramming – Techniques like visualization, affirmations, and self-hypnosis.
+Stress Management – Strategies like mindfulness, meditation, and relaxation techniques.
+Emotional Healing – Use of techniques like NLP, EFT, and therapy for emotional well-being.
+Sleep Health – Guidance on improving sleep quality and managing related disorders.
+Personalized Nutrition – Tailored diet plans for specific health goals or conditions.
+Weight Management – Holistic approaches for sustainable weight loss or maintenance.
+Fitness and Movement – Focus on functional fitness, yoga, or personalized exercise plans.
+Disease Prevention – Addressing chronic conditions like diabetes, PCOS, or hypertension.
+Sustainable Lifestyle Changes – Practical strategies for integrating wellness into daily life.
+Behavioral Transformation – Techniques for rewiring habits and overcoming mental blocks.
+Detox and Cleansing – Evidence-based approaches to refresh and rejuvenate the body.  
       </div>
     </div>
   </main>
