--- a/hire-me.html
+++ b/hire-me.html
@@ -81,4 +81,46 @@
       </div>
     </main>
 
+<footer class="custom-footer">
+    <div class="container text-center">
+        <!-- Header -->
+        <h5 class="footer-header">Brain to Body</h5>
+
+        <!-- Navigation Links -->
+        <div class="footer-links">
+            <a href="collaboration.html">Workspace</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
+        </div>
+
+        <!-- Social Icons -->
+        <div class="footer-icons">
+            <a href="https://www.instagram.com/braintobody_?igsh=bjJsdng2am1tZWll" target="_blank" title="Follow us on Instagram">
+                <i class="ion-social-instagram-outline social-icon"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/brain-to-body-nutrition/" target="_blank" title="Connect with us on LinkedIn">
+                <i class="ion-social-linkedin-outline social-icon"></i>
+            </a>
+            <a href="https://wa.me/919226307208" target="_blank" title="Chat with us on WhatsApp">
+                <i class="ion-social-whatsapp-outline social-icon"></i>
+            </a>
+            <a href="https://youtube.com/@brain_to_body?si=2rRLpzQInzvI1Y7o" target="_blank" title="Subscribe to our YouTube channel">
+                <i class="ion-social-youtube-outline social-icon"></i>
+            </a>
+            <a href="mailto:braintobodynutrition@gmail.com" title="Email us">
+                <i class="ion-email social-icon"></i>
+            </a>
+        </div>
+
+        <!-- Copyright -->
+        <p class="footer-copyright">Made by Aakash Bhandari © 2024</p>
+    </div>
+</footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlR0RQGpG8SetfNbJ1Fd3L1oiwVfuZIvfLXJyP0n8A7PPVFxNbp1WjS3GKh" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIqFv8sjGBbvDkCkJg9Am1j5RrgrVVNjl1QlmKT8jrJRMzDvrj3" crossorigin="anonymous"></script>
+</body>
+</html>
+
 
