--- a/about.html
+++ b/about.html
@@ -46,18 +46,27 @@
         <h1 class="articles-header">Meet the Co-Founders of Brain to Body: Expertise Rooted in Science and Wellness!</h1>
       </header>
       <div class="about-me">
-      At the heart of Brain to Body is a powerhouse duo bringing together deep expertise in food science, clinical research, and personalized health transformation.  
+    At the heart of Brain to Body is a powerhouse duo bringing together deep expertise in food science, clinical research, and personalized health transformation.  
+</div>
 
-Aruna Oswal  
-A dedicated dietitian with a rich background in clinical research and data management, Aruna’s journey spans from pharmaceutical marketing to clinical trials and nutrition education. With certifications in clinical research and a diploma in dietetics and weight management, she bridges the gap between evidence-based strategies and real-world wellness solutions. Her focus? Designing sustainable lifestyle changes that are as practical as they are effective.  
+<div class="about-me">
+    <strong>Aruna Oswal</strong><br>
+    A dedicated dietitian with a rich background in clinical research and data management, Aruna’s journey spans from pharmaceutical marketing to clinical trials and nutrition education. With certifications in clinical research and a diploma in dietetics and weight management, she bridges the gap between evidence-based strategies and real-world wellness solutions. Her focus? Designing sustainable lifestyle changes that are as practical as they are effective.
+</div>
 
-Soumya Chavaraddi  
-Soumya is a multi-talented food technologist and dietitian with a passion for holistic health. With over four years of experience in the FMCG sector, she has worked in food innovation, safety, and product development, while also empowering rural communities through food  quality and safety training. Soumya also  specializes in transformative techniques like meditation, visualization, NLP (Neuro-Linguistic Programming), EFT (Emotional Freedom Techniques), and more. Her integrated approach addresses both the mind and body, helping clients overcome both mental and physical challenges as a result of which is a fully transformed and sustainable wellness.
+<div class="about-me">
+    <strong>Soumya Chavaraddi</strong><br>
+    Soumya is a multi-talented food technologist and dietitian with a passion for holistic health. With over four years of experience in the FMCG sector, she has worked in food innovation, safety, and product development, while also empowering rural communities through food quality and safety training. Soumya also specializes in transformative techniques like meditation, visualization, NLP (Neuro-Linguistic Programming), EFT (Emotional Freedom Techniques), and more. Her integrated approach addresses both the mind and body, helping clients overcome both mental and physical challenges as a result of which is a fully transformed and sustainable wellness.
+</div>
 
-Together, Aruna and Soumya bring a unique, multidisciplinary approach to Brain to Body. By combining neuroscience, nutrition, pharmacy and brain reprogramming techniques, they’re on a mission to help individuals achieve sustainable, brain-first transformations.  
+<div class="about-me text-center">
+    Together, Aruna and Soumya bring a unique, multidisciplinary approach to Brain to Body. By combining neuroscience, nutrition, pharmacy, and brain reprogramming techniques, they’re on a mission to help individuals achieve sustainable, brain-first transformations.  
+</div>
 
-Let us guide you in connecting your mind and body for a healthier, more fulfilling life. Welcome to Brain to Body!  
-      </div>
+<div class="about-me text-center">
+    Let us guide you in connecting your mind and body for a healthier, more fulfilling life. Welcome to Brain to Body!
+</div>
+
     </div>
     <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food">
     <div class="about-me-right">
