--- a/about.html
+++ b/about.html
@@ -71,20 +71,49 @@
     <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food">
     <div class="about-me-right">
       <div class="about-me">
-      Specialities
-Mindset Coaching – Focus on fostering positive thinking and resilience.
-Brain Reprogramming – Techniques like visualization, affirmations, and self-hypnosis.
-Stress Management – Strategies like mindfulness, meditation, and relaxation techniques.
-Emotional Healing – Use of techniques like NLP, EFT, and therapy for emotional well-being.
-Sleep Health – Guidance on improving sleep quality and managing related disorders.
-Personalized Nutrition – Tailored diet plans for specific health goals or conditions.
-Weight Management – Holistic approaches for sustainable weight loss or maintenance.
-Fitness and Movement – Focus on functional fitness, yoga, or personalized exercise plans.
-Disease Prevention – Addressing chronic conditions like diabetes, PCOS, or hypertension.
-Sustainable Lifestyle Changes – Practical strategies for integrating wellness into daily life.
-Behavioral Transformation – Techniques for rewiring habits and overcoming mental blocks.
-Detox and Cleansing – Evidence-based approaches to refresh and rejuvenate the body.  
-      </div>
+      <header>
+        <h1 class="articles-header">Specialities</h1>
+      </header>
+      <div class="about-me">
+    <strong>Mindset Coaching</strong><br>
+Focus on fostering positive thinking and resilience.
+</div>
+    <strong>Brain Reprogramming</strong><br>
+Techniques like visualization, affirmations, and self-hypnosis.
+</div>
+    <strong>Mindset Coaching</strong><br>
+Strategies like mindfulness, meditation, and relaxation techniques.
+</div>
+    <strong>Stress Management</strong><br>
+Focus on fostering positive thinking and resilience.
+</div>
+    <strong>Emotional Healing</strong><br>
+Use of techniques like NLP, EFT, and therapy for emotional well-being.
+</div>
+    <strong>Sleep Health</strong><br>
+Guidance on improving sleep quality and managing related disorders.
+</div>
+    <strong>Personalized Nutrition</strong><br>
+Tailored diet plans for specific health goals or conditions.
+</div>
+    <strong>Weight Management</strong><br>
+Holistic approaches for sustainable weight loss or maintenance.
+</div>
+    <strong>Fitness and Movement</strong><br>
+Focus on functional fitness, yoga, or personalized exercise plans.
+</div>
+    <strong>Disease Prevention</strong><br>
+Addressing chronic conditions like diabetes, PCOS, or hypertension.
+</div>
+    <strong>Sustainable Lifestyle Changes</strong><br>
+Practical strategies for integrating wellness into daily life.
+</div>
+    <strong>Behavioral Transformation</strong><br>
+Techniques for rewiring habits and overcoming mental blocks.
+</div>
+    <strong>Detox and Cleansing</strong><br>
+Evidence-based approaches to refresh and rejuvenate the body.
+</div>
     </div>
   </main>
 <footer class="custom-footer">
