--- a/about.html
+++ b/about.html
@@ -69,52 +69,25 @@
 
     </div>
     <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food">
-    <div class="about-me-right">
-      <div class="about-me">
-      <header>
-        <h1 class="articles-header">Specialities</h1>
-      </header>
-      <div class="about-me">
-    <strong>Mindset Coaching</strong><br>
-Focus on fostering positive thinking and resilience.
+   <div class="about-me-right">
+  <div class="about-me">
+    <h3>Specialties</h3>
+    <ul>
+      <li><strong>Mindset Coaching</strong> – Focus on fostering positive thinking and resilience.</li>
+      <li><strong>Brain Reprogramming</strong> – Techniques like visualization, affirmations, and self-hypnosis.</li>
+      <li><strong>Stress Management</strong> – Strategies like mindfulness, meditation, and relaxation techniques.</li>
+      <li><strong>Emotional Healing</strong> – Use of techniques like NLP, EFT, and therapy for emotional well-being.</li>
+      <li><strong>Sleep Health</strong> – Guidance on improving sleep quality and managing related disorders.</li>
+      <li><strong>Personalized Nutrition</strong> – Tailored diet plans for specific health goals or conditions.</li>
+      <li><strong>Weight Management</strong> – Holistic approaches for sustainable weight loss or maintenance.</li>
+      <li><strong>Fitness and Movement</strong> – Focus on functional fitness, yoga, or personalized exercise plans.</li>
+      <li><strong>Disease Prevention</strong> – Addressing chronic conditions like diabetes, PCOS, or hypertension.</li>
+      <li><strong>Sustainable Lifestyle Changes</strong> – Practical strategies for integrating wellness into daily life.</li>
+      <li><strong>Behavioral Transformation</strong> – Techniques for rewiring habits and overcoming mental blocks.</li>
+      <li><strong>Detox and Cleansing</strong> – Evidence-based approaches to refresh and rejuvenate the body.</li>
+    </ul>
+  </div>
 </div>
-    <strong>Brain Reprogramming</strong><br>
-Techniques like visualization, affirmations, and self-hypnosis.
-</div>
-    <strong>Mindset Coaching</strong><br>
-Strategies like mindfulness, meditation, and relaxation techniques.
-</div>
-    <strong>Stress Management</strong><br>
-Focus on fostering positive thinking and resilience.
-</div>
-    <strong>Emotional Healing</strong><br>
-Use of techniques like NLP, EFT, and therapy for emotional well-being.
-</div>
-    <strong>Sleep Health</strong><br>
-Guidance on improving sleep quality and managing related disorders.
-</div>
-    <strong>Personalized Nutrition</strong><br>
-Tailored diet plans for specific health goals or conditions.
-</div>
-    <strong>Weight Management</strong><br>
-Holistic approaches for sustainable weight loss or maintenance.
-</div>
-    <strong>Fitness and Movement</strong><br>
-Focus on functional fitness, yoga, or personalized exercise plans.
-</div>
-    <strong>Disease Prevention</strong><br>
-Addressing chronic conditions like diabetes, PCOS, or hypertension.
-</div>
-    <strong>Sustainable Lifestyle Changes</strong><br>
-Practical strategies for integrating wellness into daily life.
-</div>
-    <strong>Behavioral Transformation</strong><br>
-Techniques for rewiring habits and overcoming mental blocks.
-</div>
-    <strong>Detox and Cleansing</strong><br>
-Evidence-based approaches to refresh and rejuvenate the body.
-</div>
-    </div>
   </main>
 <footer class="custom-footer">
     <div class="container text-center">
