--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <head>
-    <meta charset="UTF-8">
     <meta name="description" content="Brain to Body - Think. Eat. Move.">
     <meta name="author" content="aakashb1111">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,10 +12,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Brain to Body - Think. Eat. Move.</title>
 </head>
-<body class="">
+<body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img class="nav-logo" src="logo.png" alt="" srcset=""></a>
+      <a class="navbar-brand" href="#"><img class="nav-logo" src="logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon navbar-button-custom"></span>
       </button>
@@ -45,7 +43,7 @@
       <div class="contact-header">
         <h1 class="articles-header">Contact Us!</h1>
       </div>
-      <form action="" class="needs-validation">
+      <form action="contact-form-handler.php" method="POST" class="needs-validation">
           <div class="row">
                 <div class="form-group">
                     <label for="firstName">Name</label>
@@ -57,7 +55,6 @@
                 <div class="form-group">
                     <label for="surname">Surname</label>
                     <input type="text" name="surname" id="surname" class="form-control req">
-
                 </div>
 
             <div class="form-group">
@@ -77,17 +74,14 @@
 
 <footer class="custom-footer">
     <div class="container text-center">
-        <!-- Header -->
         <h5 class="footer-header">Brain to Body</h5>
 
-        <!-- Navigation Links -->
         <div class="footer-links">
             <a href="collaboration.html">Workspace</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
 
-        <!-- Social Icons -->
         <div class="footer-icons">
             <a href="https://www.instagram.com/braintobody_?igsh=bjJsdng2am1tZWll" target="_blank" title="Follow us on Instagram">
                 <i class="ion-social-instagram-outline social-icon"></i>
@@ -106,14 +100,11 @@
             </a>
         </div>
 
-        <!-- Copyright -->
         <p class="footer-copyright">Made by Aakash Bhandari © 2024</p>
     </div>
 </footer>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlR0RQGpG8SetfNbJ1Fd3L1oiwVfuZIvfLXJyP0n8A7PPVFxNbp1WjS3GKh" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIqFv8sjGBbvDkCkJg9Am1j5RrgrVVNjl1QlmKT8jrJRMzDvrj3" crossorigin="anonymous"></script>
 </body>
 </html>
-
