--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,8 @@
                     </small>
                 </div>
                 <div class="form-group">
-                    <label for="surname">Surname</label>
-                    <input type="text" name="surname" id="surname" class="form-control req">
+                    <label for="phone">Phone</label>
+                    <input type="text" name="phone" id="phone" class="form-control req">
                 </div>
 
             <div class="form-group">
