--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="nav-logo" src="logo.png" alt="Logo"></a>
              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-            </button>
+             <span class="navbar-toggler-icon navbar-button-custom"></span>
+             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
