--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,11 @@
             </a>
         </div>
 
-        <p class="footer-copyright">Made by Aakash Bhandari © 2024</p>
+       <p class="footer-copyright">
+    <a href="https://akashbhandari.netlify.app" target="_blank" style="text-decoration: none; color: inherit;">
+        Made by Aakash Bhandari © 2024
+    </a>
+</p>
     </div>
 </footer>
 
