--- a/hire-me.html
+++ b/hire-me.html
@@ -113,7 +113,11 @@
         </div>
 
         <!-- Copyright -->
-        <p class="footer-copyright">Made by Aakash Bhandari © 2024</p>
+        <p class="footer-copyright">
+    <a href="https://akashbhandari.netlify.app" target="_blank" style="text-decoration: none; color: inherit;">
+        Made by Aakash Bhandari © 2024
+    </a>
+</p>
     </div>
 </footer>
 
