--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <div class="welcome-section">
     <img src="food.jpg" alt="Image of food" class="welcome-image">
     <div class="welcome-text">
-      <p>"\n You are what you think. You are what you eat. You are how you move. It's all about Brain to Body!"</p>
+      <br>
+      <p>"You are what you think. You are what you eat. You are how you move. It's all about Brain to Body!"</p>
       <p class="text-muted">-Aruna Oswal & Soumya Chavaraddi</p>
     </div>
   </div>
