--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Instagram Post Embed -->
         <div class="instagram-post">
             <blockquote class="instagram-media" 
-                data-instgrm-permalink="https://www.instagram.com/p/C_K97KltXqI/?igsh=bmM5ZDFiYnYwOGxk" 
+                data-instgrm-permalink="https://www.instagram.com/reel/C_ht30FSWM_/?igsh=MWlqamRxeTlubDB5aQ==" 
                 data-instgrm-version="14" 
                 style="max-width:540px; margin:auto; padding:0;">
             </blockquote>
