--- a/hire-me.html
+++ b/hire-me.html
@@ -39,11 +39,26 @@
       </nav>
 
     <main class="hire-me-main">
-      <h1>Witaj,</h1>
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate corporis consequatur exercitationem sunt qui itaque, quas, aliquid natus enim tempore facilis soluta. Culpa itaque error quod aliquam autem omnis adipisci.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem sequi sint quam voluptatem excepturi ducimus ratione quos reprehenderit minus, quasi maxime inventore aut commodi. A, quaerat aut! Eveniet, deserunt repellat.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, voluptatum temporibus ipsum harum provident, ea ratione facilis obcaecati, corrupti magni modi natus voluptates eum tenetur quae maiores autem facere adipisci!
-      </p>
+  <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food">
+   <div class="about-me-right">
+  <div class="about-me">
+    <h3>Specialties</h3>
+    <ul>
+      <li><strong>Mindset Coaching</strong> – Focus on fostering positive thinking and resilience.</li>
+      <li><strong>Brain Reprogramming</strong> – Techniques like visualization, affirmations, and self-hypnosis.</li>
+      <li><strong>Stress Management</strong> – Strategies like mindfulness, meditation, and relaxation techniques.</li>
+      <li><strong>Emotional Healing</strong> – Use of techniques like NLP, EFT, and therapy for emotional well-being.</li>
+      <li><strong>Sleep Health</strong> – Guidance on improving sleep quality and managing related disorders.</li>
+      <li><strong>Personalized Nutrition</strong> – Tailored diet plans for specific health goals or conditions.</li>
+      <li><strong>Weight Management</strong> – Holistic approaches for sustainable weight loss or maintenance.</li>
+      <li><strong>Fitness and Movement</strong> – Focus on functional fitness, yoga, or personalized exercise plans.</li>
+      <li><strong>Disease Prevention</strong> – Addressing chronic conditions like diabetes, PCOS, or hypertension.</li>
+      <li><strong>Sustainable Lifestyle Changes</strong> – Practical strategies for integrating wellness into daily life.</li>
+      <li><strong>Behavioral Transformation</strong> – Techniques for rewiring habits and overcoming mental blocks.</li>
+      <li><strong>Detox and Cleansing</strong> – Evidence-based approaches to refresh and rejuvenate the body.</li>
+    </ul>
+  </div>
+</div>
       <header>
         <h1 class="articles-header">Wybierz opcje wspolpracy</h1>
       </header>
