--- a/hire-me.html
+++ b/hire-me.html
@@ -15,28 +15,43 @@
 <body class="">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img class="nav-logo" src="logo.png" alt="" srcset=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon navbar-button-custom"></span>
-      </button>
-       <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+        <!-- Logo -->
+        <a class="navbar-brand" href="#">
+            <img class="nav-logo" src="logo.png" alt="Logo">
+        </a>
+        
+        <!-- Toggle button for mobile -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <!-- Navigation Links -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Workspace</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
-              </li>
+                    <a class="nav-link active" aria-current="page" href="#">
+                        <i class="fas fa-home"></i> Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="hire-me.html">
+                        <i class="fas fa-briefcase"></i> Workspace
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">
+                        <i class="fas fa-info-circle"></i> About Us
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">
+                        <i class="fas fa-envelope"></i> Contact Us
+                    </a>
+                </li>
             </ul>
-          </div>
         </div>
-      </nav>
+    </div>
+</nav>
 
     <main class="hire-me-main">
   <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food">
