--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link" href="index.html">
                         <i class="fas fa-home"></i> Home
                     </a>
                 </li>
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">
+                    <a class="nav-link active" aria-current="page" href="#">
                         <i class="fas fa-info-circle"></i> About Us
                     </a>
                 </li>
