--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,11 @@
 
 <footer class="custom-footer">
     <div class="container text-center">
-        <h5 class="footer-header">Brain to Body</h5>
+        <h5 class="footer-header">
+            <a href="index.html" style="text-decoration: none; color: inherit;">
+                Brain to Body
+            </a>
+        </h5>
         <div class="footer-links">
             <a href="collaboration.html">Workspace</a>
             <a href="about.html">About Us</a>
