--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
             </a>
         </h5>
         <div class="footer-links">
-            <a href="collaboration.html">Workspace</a>
+            <a href="hire-me.html">Workspace</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
