--- a/hire-me.html
+++ b/hire-me.html
@@ -75,36 +75,36 @@
   </div>
 </div>
       <header>
-        <h1 class="articles-header">Wybierz opcje wspolpracy</h1>
+        <h1 class="articles-header">Our Plans</h1>
       </header>
       <div class="row hire-me-options">
         <div class="col-sm-4">
           <div class="card card text-center">
-            <h5 class="card-header">Plan pierwszy</h5>
+            <h5 class="card-header">Plan 1</h5>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="button-main">Wybieram</a>
+              <a href="#" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="card text-center">
-            <h5 class="card-header">Plan drugi</h5>
+            <h5 class="card-header">Plan 2</h5>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="button-main">Wybieram</a>
+              <a href="#" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="card card text-center">
-            <h5 class="card-header">Plan trzeci</h5>
+            <h5 class="card-header">Plan 3</h5>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="button-main">Wybieram</a>
+              <a href="#" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
             </a>
         </h5>
         <div class="footer-links">
-            <a href="collaboration.html">Workspace</a>
+            <a href="hire-me.html">Workspace</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
