--- a/index.html
+++ b/index.html
@@ -64,25 +64,64 @@
       <p class="text-muted">-Aruna Oswal & Soumya Chavaraddi</p>
     </div>
   </div>
+
+    
  <div class="about-me-right">
   <div class="about-me">
-    <h3>Specialties</h3>
-    <ul>
-      <li><strong>Mindset Coaching</strong> – Focus on fostering positive thinking and resilience.</li>
-      <li><strong>Brain Reprogramming</strong> – Techniques like visualization, affirmations, and self-hypnosis.</li>
-      <li><strong>Stress Management</strong> – Strategies like mindfulness, meditation, and relaxation techniques.</li>
-      <li><strong>Emotional Healing</strong> – Use of techniques like NLP, EFT, and therapy for emotional well-being.</li>
-      <li><strong>Sleep Health</strong> – Guidance on improving sleep quality and managing related disorders.</li>
-      <li><strong>Personalized Nutrition</strong> – Tailored diet plans for specific health goals or conditions.</li>
-      <li><strong>Weight Management</strong> – Holistic approaches for sustainable weight loss or maintenance.</li>
-      <li><strong>Fitness and Movement</strong> – Focus on functional fitness, yoga, or personalized exercise plans.</li>
-      <li><strong>Disease Prevention</strong> – Addressing chronic conditions like diabetes, PCOS, or hypertension.</li>
-      <li><strong>Sustainable Lifestyle Changes</strong> – Practical strategies for integrating wellness into daily life.</li>
-      <li><strong>Behavioral Transformation</strong> – Techniques for rewiring habits and overcoming mental blocks.</li>
-      <li><strong>Detox and Cleansing</strong> – Evidence-based approaches to refresh and rejuvenate the body.</li>
+    <h3 class="section-title">✨ Specialties ✨</h3>
+    <ul class="specialties-list">
+      <li>
+        <span class="icon">🧠</span>
+        <strong>Mindset Coaching</strong> – Focus on fostering positive thinking and resilience.
+      </li>
+      <li>
+        <span class="icon">🔄</span>
+        <strong>Brain Reprogramming</strong> – Techniques like visualization, affirmations, and self-hypnosis.
+      </li>
+      <li>
+        <span class="icon">🧘</span>
+        <strong>Stress Management</strong> – Strategies like mindfulness, meditation, and relaxation techniques.
+      </li>
+      <li>
+        <span class="icon">💖</span>
+        <strong>Emotional Healing</strong> – Use of techniques like NLP, EFT, and therapy for emotional well-being.
+      </li>
+      <li>
+        <span class="icon">🌙</span>
+        <strong>Sleep Health</strong> – Guidance on improving sleep quality and managing related disorders.
+      </li>
+      <li>
+        <span class="icon">🥗</span>
+        <strong>Personalized Nutrition</strong> – Tailored diet plans for specific health goals or conditions.
+      </li>
+      <li>
+        <span class="icon">⚖️</span>
+        <strong>Weight Management</strong> – Holistic approaches for sustainable weight loss or maintenance.
+      </li>
+      <li>
+        <span class="icon">🏋️</span>
+        <strong>Fitness and Movement</strong> – Focus on functional fitness, yoga, or personalized exercise plans.
+      </li>
+      <li>
+        <span class="icon">🩺</span>
+        <strong>Disease Prevention</strong> – Addressing chronic conditions like diabetes, PCOS, or hypertension.
+      </li>
+      <li>
+        <span class="icon">🌱</span>
+        <strong>Sustainable Lifestyle Changes</strong> – Practical strategies for integrating wellness into daily life.
+      </li>
+      <li>
+        <span class="icon">💡</span>
+        <strong>Behavioral Transformation</strong> – Techniques for rewiring habits and overcoming mental blocks.
+      </li>
+      <li>
+        <span class="icon">🛁</span>
+        <strong>Detox and Cleansing</strong> – Evidence-based approaches to refresh and rejuvenate the body.
+      </li>
     </ul>
   </div>
 </div>
+
         <!-- Instagram Post Embed -->
         <div class="instagram-post">
             <blockquote class="instagram-media" 
