--- a/hire-me.html
+++ b/hire-me.html
@@ -55,7 +55,7 @@
 </nav>
 
     <main class="hire-me-main">
-  <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food">
+  <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food"><br><br>
 
         
         
