--- a/hire-me.html
+++ b/hire-me.html
@@ -67,9 +67,9 @@
           <div class="card card text-center">
             <h5 class="card-header">Plan 1</h5>
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="button-main">Learn more</a>
+              <h5 class="card-title">1 Month Plan</h5>
+              <p class="card-text">A quick, personalized plan to jumpstart your health goals.</p>
+              <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
@@ -77,9 +77,9 @@
           <div class="card text-center">
             <h5 class="card-header">Plan 2</h5>
             <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="button-main">Learn more</a>
+              <h5 class="card-title">3 Month Plan</h5>
+              <p class="card-text">A balanced approach for steady progress and lasting change.</p>
+              <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
@@ -88,8 +88,8 @@
             <h5 class="card-header">Plan 3</h5>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="button-main">Learn more</a>
+              <p class="card-text">A long-term plan for sustained results and lifestyle transformation.</p>
+              <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
