--- a/index.html
+++ b/index.html
@@ -152,7 +152,16 @@
   </div>
 </div>
 
-
+<div class="simple-widget">
+    <h3 class="widget-title">MAKING IT AS SIMPLE AS IT GETS</h3>
+    <ul class="widget-list">
+        <li><i class="ion-checkmark-circled"></i> No medicines prescribed</li>
+        <li><i class="ion-checkmark-circled"></i> No foreign foods or packaged foods or supplements</li>
+        <li><i class="ion-checkmark-circled"></i> No hardcore exercise required as part of the diet (although any physical activity can be incorporated if patient prefers it)</li>
+        <li><i class="ion-checkmark-circled"></i> No fixation with kilos lost, we are aiming for good health and energetic feeling, numbers follow automatically</li>
+        <li><i class="ion-checkmark-circled"></i> No expensive foreign superfoods, only traditional foods that people are used to</li>
+    </ul>
+</div>
 
         <!-- Instagram Post Embed -->
         <div class="instagram-post">
