--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     </div>
   </div>
 
-<div class="widget-container">
+<div class="brain-to-body-widget-container">
     <!-- Left Widget -->
-    <div class="widget left-widget">
-        <h2 class="widget-title">HOW IT WORKS?</h2>
-        <ul class="widget-list">
+    <div class="brain-to-body-widget brain-to-body-left-widget">
+        <h2 class="brain-to-body-widget-title">HOW IT WORKS?</h2>
+        <ul class="brain-to-body-widget-list">
             <li>When a patient visits, we first take up a detailed medical history as well as their physical parameters (height, weight, body composition analysis). Also their particular schedules, liking, limitations etc are noted.</li>
             <li>Then, with the patient’s involvement, Aruna & Soumya design a diet plan and a mental health program with minimal changes to their existing habits and eating patterns. Usually the initial plan is for 2 to 3 weeks.</li>
             <li>In the next visit, all the parameters are measured again, and based on the results, further changes are made to the diet plan. Typically patients meet every week till they reach their goals.</li>
@@ -78,18 +78,18 @@
         </ul>
     </div>
     <!-- Center Widget -->
-    <div class="widget center-widget">
-        <h2 class="widget-title">HELPING YOU IN EVERY STEP OF THE WAY</h2>
-        <ul class="widget-list">
+    <div class="brain-to-body-widget brain-to-body-center-widget">
+        <h2 class="brain-to-body-widget-title">HELPING YOU IN EVERY STEP OF THE WAY</h2>
+        <ul class="brain-to-body-widget-list">
             <li>During consultations, all the issues like what to do when away, what to eat out, eating during functions/weddings/parties etc are discussed and answered.</li>
             <li>Patients are also explained why their diet is planned in a particular way because when they understand, they follow better.</li>
             <li>Patients are always in touch via emails/calls in case of any queries or discomfort. So they always have support & guidance from Aruna & Soumya.</li>
         </ul>
     </div>
     <!-- Right Widget -->
-    <div class="widget right-widget">
-        <h2 class="widget-title">MAKING IT AS SIMPLE AS IT GETS!</h2>
-        <ul class="widget-list">
+    <div class="brain-to-body-widget brain-to-body-right-widget">
+        <h2 class="brain-to-body-widget-title">MAKING IT AS SIMPLE AS IT GETS!</h2>
+        <ul class="brain-to-body-widget-list">
             <li>No medicines prescribed</li>
             <li>No packaged foods or supplements</li>
             <li>No hardcore exercise required as part of the diet (although any physical activity can be incorporated if patient prefers it)</li>
@@ -100,18 +100,17 @@
 </div>
 
 
-
-<div class="appointment-widget">
+<div class="brain-to-body-appointment-widget">
   <!-- Book an Appointment Section -->
-  <div class="left-widget">
+  <div class="brain-to-body-left-widget">
     <h3>Book an Appointment</h3>
-    <button class="call-now-btn" onclick="window.location.href='tel:+919226307208'">Call Now</button>
+    <button class="brain-to-body-call-now-btn" onclick="window.location.href='tel:+919226307208'">Call Now</button>
   </div>
 
   <!-- Can't visit Clinic? Online Consultation Section -->
-  <div class="right-widget">
+  <div class="brain-to-body-right-widget">
     <h3>Can't visit Clinic? Sign up for Online Consultation</h3>
-    <button class="know-more-btn" onclick="window.open('https://wa.me/+919226307208', '_blank')">Know More</button>
+    <button class="brain-to-body-know-more-btn" onclick="window.open('https://wa.me/+919226307208', '_blank')">Know More</button>
   </div>
 </div>
 
