--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <main class="index-main">
   <div class="welcome-section">
-    <img src="food.jpg" alt="Image of food" class="welcome-image">
+    <img src="welcome.jpg" alt="Image of food" class="welcome-image">
     <div class="welcome-text">
       <br>
       <p>"You are what you think. You are what you eat. You are how you move. It's all about Brain to Body!"</p>
