--- a/index.html
+++ b/index.html
@@ -69,35 +69,63 @@
 <div class="brain-to-body-widget-container">
     <!-- Left Widget -->
     <div class="brain-to-body-widget brain-to-body-left-widget">
-        <h2 class="brain-to-body-widget-title">HOW IT WORKS?</h2>
-        <ul class="brain-to-body-widget-list">
-            <li>When a patient visits, we first take up a detailed medical history as well as their physical parameters (height, weight, body composition analysis). Also their particular schedules, liking, limitations etc are noted.</li>
-            <li>Then, with the patient’s involvement, Aruna & Soumya design a diet plan and a mental health program with minimal changes to their existing habits and eating patterns. Usually the initial plan is for 2 to 3 weeks.</li>
-            <li>In the next visit, all the parameters are measured again, and based on the results, further changes are made to the diet plan. Typically patients meet every week till they reach their goals.</li>
-            <li>On reaching their goals, patients are taught to maintain their health and plan their own diets. This involves explanations regarding how to plan their meals, what and how much to eat, what red flags to avoid etc. Patients are encouraged to keep checking their parameters at least once every 3-4 months.</li>
+        <h2 class="brain-to-body-widget-title">HOW IT WORKS</h2>
+        <p>At Brain to Body, our process begins with understanding you.</p>
+        <p>
+            When you visit us, we take a comprehensive medical history (blood reports required) and measure key physical 
+            parameters like height, weight, and body composition. We also delve into your daily routines, preferences, and 
+            any limitations you may have.
+        </p>
+        <p>
+            Together, with your active participation, Aruna and Soumya craft a personalized diet plan, physical exercise 
+            regime, and mental health program designed to make minimal changes to your existing habits. With the weekly 
+            catch-up calls, the plans get updated.
+        </p>
+        <p>
+            Weekly check-ins are recommended until you reach your health goals. We strongly advise people to invest their 
+            time, energy, and money in long-term plans as health and mind makeover is a slow process.
+        </p>
+        <p>Once you've achieved your goals, we guide you on maintaining your results independently. You'll learn how to:</p>
+        <ul>
+            <li>Plan balanced meals.</li>
+            <li>Understand portion sizes.</li>
+            <li>Identify red flags in your diet.</li>
         </ul>
+        <p>We encourage you to monitor your progress every 3–4 months to stay on track.</p>
     </div>
+
     <!-- Center Widget -->
     <div class="brain-to-body-widget brain-to-body-center-widget">
-        <h2 class="brain-to-body-widget-title">HELPING YOU IN EVERY STEP OF THE WAY</h2>
-        <ul class="brain-to-body-widget-list">
-            <li>During consultations, all the issues like what to do when away, what to eat out, eating during functions/weddings/parties etc are discussed and answered.</li>
-            <li>Patients are also explained why their diet is planned in a particular way because when they understand, they follow better.</li>
-            <li>Patients are always in touch via emails/calls in case of any queries or discomfort. So they always have support & guidance from Aruna & Soumya.</li>
-        </ul>
+        <h2 class="brain-to-body-widget-title">SUPPORT EVERY STEP OF THE WAY</h2>
+        <p>Life happens, and we’re here to help you navigate it.</p>
+        <p>
+            Whether you're traveling, dining out, or attending events like weddings and parties, we address your concerns 
+            and provide practical solutions.
+        </p>
+        <p>
+            We also ensure you understand why your plan is structured the way it is because when you know the why, following 
+            it becomes easier.
+        </p>
+        <p>
+            Got questions or feeling uncertain? You’re never alone. Reach out anytime via email or phone for ongoing 
+            support and guidance from Aruna and Soumya.
+        </p>
     </div>
+
     <!-- Right Widget -->
     <div class="brain-to-body-widget brain-to-body-right-widget">
-        <h2 class="brain-to-body-widget-title">MAKING IT AS SIMPLE AS IT GETS!</h2>
-        <ul class="brain-to-body-widget-list">
-            <li>No medicines prescribed</li>
-            <li>No packaged foods or supplements</li>
-            <li>No hardcore exercise required as part of the diet (although any physical activity can be incorporated if patient prefers it)</li>
-            <li>No fixation with kilos lost, we are aiming for good health and energetic feeling, numbers follow automatically</li>
-            <li>No expensive foreign superfoods, only traditional foods that people are used to</li>
-        </ul>    
+        <h2 class="brain-to-body-widget-title">SIMPLE, SUSTAINABLE, AND EFFECTIVE</h2>
+        <p>At Brain to Body, we believe health should be simple and sustainable. Here's what makes our approach different:</p>
+        <ul>
+            <li><strong>No medications</strong> are prescribed.</li>
+            <li><strong>No packaged foods or supplements</strong>—just real, wholesome ingredients.</li>
+            <li><strong>No hardcore exercise</strong>. Minimalistic and body-centric workout regimes are planned (exception if body sculpting or shaping is required).</li>
+            <li><strong>No obsession over weight loss</strong>—we focus on cultivating vibrant health and energy. The numbers will follow.</li>
+            <li><strong>No expensive superfoods</strong>—we rely on nourishing, traditional foods that suit your lifestyle.</li>
+        </ul>
     </div>
 </div>
+
 
 
 <div class="appointment-widget">
