--- a/hire-me.html
+++ b/hire-me.html
@@ -57,6 +57,51 @@
     <main class="hire-me-main">
   <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food"><br><br>
 
+  <section class="updates-widget mt-5">
+    <div class="container">
+        <header class="text-center mb-4">
+            <h2 class="updates-header">Updates</h2>
+            <hr class="mx-auto" style="width: 50px; height: 2px; background-color: #000;">
+        </header>
+        
+        <!-- Video Section -->
+        <div class="row mb-4">
+            <div class="col-12 text-center">
+                <video controls width="80%" poster="video-thumbnail.jpg">
+                    <source src="update.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
+        
+        <!-- Challenge Section -->
+        <div class="row">
+            <div class="col-12">
+                <h3 class="text-center">Fit before the New Year - 1 Month Challenge</h3>
+                <p>
+                    Kickstart your health transformation with our structured, step-by-step plan:
+                </p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <strong>Week 1:</strong> Establish a healthy routine with fixed wake-up and sleep times, daily walks, timed meals, hydration, and calming box-breathing exercises.
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Week 2:</strong> Introduce a low-carb diet, intense workouts, and vagus nerve activation for improved focus and relaxation.
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Week 3:</strong> Focus on a nutrient-rich diet with proteins, fruits, and vegetables, paired with guided visualization to strengthen your mental clarity.
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Week 4:</strong> Allow recovery with a gradual reintroduction of protein and carbs, integrating all practices.
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Week 5:</strong> Transition to a sustainable maintenance diet and use NLP techniques like anchoring and cleansing to solidify your progress.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 
       <header>
         <h1 class="articles-header">Our Plans</h1>
